# spt

./: Cargo.toml  README.md
src/: aabb.rs  bvh.rs  camera.rs  hit_record.rs  hittable.rs  hittable_list.rs  interval.rs  lambertian.rs  lib.rs  material.rs  medium.rs  onb.rs  pdf.rs  perlin.rs  quad.rs  ray.rs  renderer.rs  rotate.rs  screen.rs  sphere.rs  texture.rs  translate.rs  types.rs  utility.rs
