[package]
name = "spt"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "BSD-3"
description = "A toy ray tracer written in Rust"
keywords = ["graphics"]
categories = ["development-tools"]
repository = "https://github.com/DKenefake/spt/"

[dependencies]
glam = "0.30.0"
smolprng = {version = "0.1.6", features = ["std"]}
rayon = "1.10.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = true